--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="/node_modules/bootstrap-"> -->
+    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
     <script type="module" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </head>
 <body>
     <h1>Wel come to IMS</h1>
     <ul>
-        <li>Manage Teachers</li>
-        <li>Manage Courses</li>
-        <li>Assign Teachers</li>
+        <li><a href="#">Manage Teachers</a></li>
+        <li><a href="#">Manage Courses</a></li>
+        <li><a href="#">Assign Teachers</a></li>
     </ul>
     
 </body>
